kube/real-estate-prod-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: real-estate-prod
  labels:
    name: real-estate-prod
    env: production
